--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,187 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
 
-# Other files and folders
-.settings/
+local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua"))()
+local Window = Library.CreateLib("TWOG/TWEG Private", "Midnight")
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+-- Main
+local Main = Window:NewTab("Main")
+local MainSection = Main:NewSection("Main")
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+
+MainSection:NewButton("inf hp the world", "it will make the world the hp infinite", function()
+    local args = {
+    [1] = "HydraStand",
+    [2] = 0,
+    [3] = math.huge
+}
+
+game:GetService("ReplicatedStorage").Stand:FireServer(unpack(args))
+end)
+
+MainSection:NewKeybind("T", "it will throw sonic rings", Enum.KeyCode.T, function()
+	game:GetService("ReplicatedStorage").SonicRing:FireServer()
+
+end)
+
+MainSection:NewButton("Infinite Yield", "incase if you need remote spy", function()
+loadstring(game:HttpGet('https://raw.githubusercontent.com/EdgeIY/infiniteyield/master/source'))()
+
+end)
+
+MainSection:NewKeybind("Resume Time ", "Incase you need to resume inf ts", Enum.KeyCode.Y, function()
+	game:GetService("ReplicatedStorage").RTZEffect:FireServer()
+end)
+
+MainSection:NewButton("Admin Gui", "this admin gui can almost get all the stand's in old aut", function()
+    game.Players.LocalPlayer.PlayerGui.AdminGUI.Enabled = true
+end)
+
+MainSection:NewKeybind("Timestop", "Work's", Enum.KeyCode.F, function()
+	loadstring(game:HttpGet("https://pastebin.com/raw/ZNDvtBzy",true))()
+end)
+
+MainSection:NewButton("TWEG", "The World Equal God", function()
+	loadstring(game:HttpGet("https://pastebin.com/raw/EVkWmtzA",true))()
+end)
+
+MainSection:NewButton("HPPBE", "Holy Pot Platinum But Evil", function()
+	loadstring(game:HttpGet("https://pastebin.com/raw/iLk7BRF1",true))()
+end)
+
+MainSection:NewButton("KPBG", "Knight Pot But Good", function()
+    loadstring(game:HttpGet("https://pastebin.com/raw/UeSf3YUQ",true))()
+end)
+
+MainSection:NewButton("HGBM", "Hieprohant Green But Meme", function()
+	loadstring(game:HttpGet("https://pastebin.com/raw/wSZf47Rs",true))()
+end)
+
+MainSection:NewButton("skins", "this is private", function()
+    loadstring(game:HttpGet("https://pastebin.com/raw/pnnHf2wL",true))()
+end)
+
+MainSection:NewButton("TWOG", "I think so", function()
+    loadstring(game:HttpGet("https://pastebin.com/raw/PEcfVS8A",true))()
+end)
+
+--Local Player
+local Player = Window:NewTab("Player")
+local PlayerSection = Player:NewSection("Player")
+
+PlayerSection:NewSlider("Walkspeed", "more faster", 500, 16, function(s) -- 500 (MaxValue) | 0 (MinValue)
+    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
+end)
+
+PlayerSection:NewButton("Infjump", "Jump inf", function()
+local ScreenGui = Instance.new("ScreenGui")
+local main = Instance.new("Frame")
+local TextLabel = Instance.new("TextLabel")
+local Frame = Instance.new("Frame")
+local INFJUMP = Instance.new("TextButton")
+local TextLabel_2 = Instance.new("TextLabel")
+
+ScreenGui.Parent = game.CoreGui
+
+main.Name = "main"
+main.Parent = ScreenGui
+main.Active = true
+main.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+main.BorderSizePixel = 0
+main.Position = UDim2.new(0.119258665, 0, 0, 0)
+main.Size = UDim2.new(0, 146, 0, 28)
+main.Active = true
+main.Draggable = false
+
+TextLabel.Parent = main
+TextLabel.BackgroundColor3 = Color3.fromRGB(38, 38, 38)
+TextLabel.BorderSizePixel = 0
+TextLabel.Size = UDim2.new(0, 146, 0, 28)
+TextLabel.Font = Enum.Font.SciFi
+TextLabel.Text = "Misc"
+TextLabel.TextColor3 = Color3.fromRGB(255, 255, 255)
+TextLabel.TextSize = 17.000
+TextLabel.TextWrapped = true
+
+Frame.Parent = main
+Frame.BackgroundColor3 = Color3.fromRGB(86, 86, 86)
+Frame.BorderSizePixel = 0
+Frame.Position = UDim2.new(0, 0, 1, 0)
+Frame.Size = UDim2.new(0, 146, 0, 61)
+
+INFJUMP.Name = "INFJUMP"
+INFJUMP.Parent = main
+INFJUMP.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+INFJUMP.BorderSizePixel = 0
+INFJUMP.Position = UDim2.new(0.794520497, 0, 1.6785717, 0)
+INFJUMP.Size = UDim2.new(0, 21, 0, 21)
+INFJUMP.Font = Enum.Font.SourceSans
+INFJUMP.Text = ""
+INFJUMP.TextColor3 = Color3.fromRGB(0, 0, 0)
+INFJUMP.TextSize = 14.000
+INFJUMP.MouseButton1Down:connect(function()
+local Player = game:GetService'Players'.LocalPlayer;
+local UIS = game:GetService'UserInputService';
+ 
+_G.JumpHeight = 50;
+ 
+function Action(Object, Function) if Object ~= nil then Function(Object); end end
+ 
+UIS.InputBegan:connect(function(UserInput)
+    if UserInput.UserInputType == Enum.UserInputType.Keyboard and UserInput.KeyCode == Enum.KeyCode.Space then
+        Action(Player.Character.Humanoid, function(self)
+            if self:GetState() == Enum.HumanoidStateType.Jumping or self:GetState() == Enum.HumanoidStateType.Freefall then
+                Action(self.Parent.HumanoidRootPart, function(self)
+                    self.Velocity = Vector3.new(0, _G.JumpHeight, 0);
+                end)
+            end
+        end)
+    end
+end)
+end)
+
+TextLabel_2.Parent = main
+TextLabel_2.BackgroundColor3 = Color3.fromRGB(38, 38, 38)
+TextLabel_2.BorderSizePixel = 0
+TextLabel_2.Position = UDim2.new(0.0547945201, 0, 1.57142854, 0)
+TextLabel_2.Size = UDim2.new(0, 94, 0, 28)
+TextLabel_2.Font = Enum.Font.SciFi
+TextLabel_2.Text = "Inf jump"
+TextLabel_2.TextColor3 = Color3.fromRGB(255, 255, 255)
+TextLabel_2.TextSize = 17.000
+TextLabel_2.TextWrapped = true
+
+local function TKDWQ_fake_script() -- INFJUMP.LocalScript 
+local script = Instance.new('LocalScript', INFJUMP)
+
+function zigzag(X) return math.acos(math.cos(X*math.pi))/math.pi end
+
+counter = 0
+
+while wait(0.1)do
+script.Parent.BackgroundColor3 = Color3.fromHSV(zigzag(counter),1,1)
+ 
+counter = counter + 0.01
+end
+end
+coroutine.wrap(TKDWQ_fake_script)()
+end)
+
+--Others
+local Others = Window:NewTab("Others")
+local OthersSection = Others:NewSection("Others")
+
+OthersSection:NewButton("secret spec/stand", "don't leak this...", function()
+ loadstring(game:HttpGet("https://pastebin.com/raw/iQqWenxu",true))()
+end)
+
+OthersSection:NewButton("No cd ring", "This script can hold the keybind T aka no cd", function()
+	loadstring(game:HttpGet("https://pastebin.com/raw/k1TSR2Sy",true))()
+end)
+
+
+--Settings
+local Settings = Window:NewTab("Settings")
+local SettingsSection = Settings:NewSection("Settings")
+
+SettingsSection:NewKeybind("Close/pop up Gui", "This Will Let You Close And Open This Gui", Enum.KeyCode.P, function()
+	Library:ToggleUI()
+end)
