--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,13 @@ MainSection:NewButton("Admin Gui", "this admin gui can almost get all the stand'
 end)
 
 MainSection:NewKeybind("Timestop", "Work's", Enum.KeyCode.F, function()
-	loadstring(game:HttpGet("https://pastebin.com/raw/ZNDvtBzy",true))()
+	local args = {
+		[1] = 0/0,
+		[2] = "Vern"
+	}
+	
+	game:GetService("ReplicatedStorage").Timestop:FireServer(unpack(args))
+	
 end)
 
 MainSection:NewButton("TWEG", "The World Equal God", function()
@@ -67,23 +73,104 @@ MainSection:NewButton("TWEG", "The World Equal God", function()
 end)
 
 MainSection:NewButton("HPPBE", "Holy Pot Platinum But Evil", function()
-	loadstring(game:HttpGet("https://pastebin.com/raw/iLk7BRF1",true))()
+	game:GetService("ReplicatedStorage").Stand:FireServer("KnightPotStand",50,math.huge,"\226\153\146\226\153\142\226\153\136\226\153\138\226\153\147\226\153\136\226\153\137\226\153\136\226\153\136\226\153\138")
+
+	game:GetService("ReplicatedStorage").Samurai:FireServer()
+
+	game:GetService("ReplicatedStorage").OneMoreSacrifice:FireServer()
 end)
 
 MainSection:NewButton("KPBG", "Knight Pot But Good", function()
-    loadstring(game:HttpGet("https://pastebin.com/raw/UeSf3YUQ",true))()
+    game:GetService("ReplicatedStorage").Stand:FireServer("HolyPotPlatinumStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("GoldExperienceRequiemStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").VernsSamuraiSword:FireServer()
+
+	game:GetService("ReplicatedStorage").OneMoreTime:FireServer()
 end)
 
 MainSection:NewButton("HGBM", "Hieprohant Green But Meme", function()
-	loadstring(game:HttpGet("https://pastebin.com/raw/wSZf47Rs",true))()
+	game:GetService("ReplicatedStorage").Stand:FireServer("MemeHierophantStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("wtfStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("MIUStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").DRIPGOKU:FireServer()
+
 end)
 
 MainSection:NewButton("skins", "this is private", function()
-loadstring(game:HttpGet("https://raw.githubusercontent.com/Cylex234/Old-aut-gui-1/main/All%20skins",true))()
+    game:GetService("ReplicatedStorage").Samurai:FireServer()
+
+	game:GetService("ReplicatedStorage").VernsSamuraiSword:FireServer()
+
+	game:GetService("ReplicatedStorage").Chara:FireServer()
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("HolyPotPlatinumStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("KnightPotStand",50,math.huge,"\226\153\146\226\153\142\226\153\136\226\153\138\226\153\147\226\153\136\226\153\137\226\153\136\226\153\136\226\153\138")
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("KingCrimsonRequiemStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("GoldExperienceRequiemStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").MUI:FireServer()
+
+	game:GetService("ReplicatedStorage").MUIAnims:FireServer()
+
+	game:GetService("ReplicatedStorage").DRIPGOKU:FireServer()
+
+	game:GetService("ReplicatedStorage").OneMoreTime:FireServer()
+
+	game:GetService("ReplicatedStorage").OneMoreSacrifice:FireServer()
+
+	game:GetService("ReplicatedStorage").OneMoreBeatboxer:FireServer()
+
+	game:GetService("ReplicatedStorage").KarsULF:FireServer()
+
+	game:GetService("ReplicatedStorage").Kars:FireServer()
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("StevePlatinum",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("MemeHierophantStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("wtfStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("MIUStand",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("PartyPotPlatinum",50,math.huge)
+
+	game:GetService("ReplicatedStorage").Stand:FireServer("VirtualShadowTheWorldStand",50,math.huge"\226\153\144\226\153\145\226\153\138\226\153\139\226\153\138\226\153\147\226\153\139\226\153\142\226")
+
+	game:GetService("ReplicatedStorage").SuperShadow:FireServer()
+
+	game:GetService("ReplicatedStorage").Sword:FireServer()
+    
+	game:GetService("ReplicatedStorage").Stand:FireServer("HierophantGreenStand",50,math.huge)
 end)
 
 MainSection:NewButton("TWOG", "I think so", function()
-    loadstring(game:HttpGet("https://pastebin.com/raw/PEcfVS8A",true))()
+    game:GetService("ReplicatedStorage").Stand:FireServer("PartyPotPlatinum",50,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("VirtualShadowTheWorldStand",50,math.huge,"\226\153\138\226\153\137\226\153\143\226\153\138\226\153\143\226\153\147\226\153\143\226\153\144\226\153\140\226\153\140")
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("HolyPotPlatinumStand",50,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("GoldExperienceRequiemStand",50,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("KingCrimsonRequiemStand",50,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("KnightPotStand",50,math.huge,"\226\153\146\226\153\142\226\153\136\226\153\138\226\153\147\226\153\136\226\153\137\226\153\136\226\153\136\226\153\138")
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("MIUStand",5,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("HeavenStarPlatinum",50,math.huge)
+
+    game:GetService("ReplicatedStorage").Stand:FireServer("StevePlatinum",50,math.huge)
+
+    game:GetService("ReplicatedStorage").OneMoreTime:FireServer()
 end)
 
 MainSection:NewButton("Rd2's skin", "My Friend's skin", function()
@@ -98,7 +185,6 @@ MainSection:NewButton("Rd2's skin", "My Friend's skin", function()
 	game:GetService("ReplicatedStorage").SuperShadow:FireServer()
 
 	game:GetService("ReplicatedStorage").Kars:FireServer()
-
 
 end)
 
@@ -123,7 +209,35 @@ OthersSection:NewButton("secret spec/stand", "don't leak this...", function()
 end)
 
 OthersSection:NewButton("No cd ring", "This script can hold the keybind T aka no cd", function()
-	loadstring(game:HttpGet("https://pastebin.com/raw/k1TSR2Sy",true))()
+	    local Key = "T"
+local Toggle = false
+--[[
+
+    For symbols, put the name of the symbol, with uppercase starting letters.
+    So for example, Semicolon, LessThan, Equals, Minus, Underscore, RightBracket, LeftControl
+    all those would work
+    Check out https://developer.roblox.com/en-us/api-reference/enum/KeyCode for a list of names that'll work
+
+--]]
+
+game:GetService("UserInputService").InputBegan:Connect(function(keyobject, stuffhappening)
+    if keyobject.KeyCode == Enum.KeyCode[Key] and not stuffhappening then 
+        Toggle = true
+    end
+end)
+
+game:GetService("UserInputService").InputEnded:Connect(function(keyobject, stuffhappening)
+    if keyobject.KeyCode == Enum.KeyCode[Key] and not stuffhappening then 
+        Toggle = false
+    end
+	game:GetService('RunService').Stepped:connect(function()
+		if Toggle then
+			game:GetService("ReplicatedStorage").SonicRing:FireServer()
+			wait(1)
+		end
+	end)
+	end)
+	
 end)
 
 OthersSection:NewButton("kill Gui", "Kill Gui Script", function()
@@ -131,7 +245,33 @@ loadstring(game:HttpGet("https://raw.githubusercontent.com/Cylex234/Old-aut-gui-
 end)
 
 OthersSection:NewButton("Walk in Timestop", "It will let you walk in time stop", function()
-loadstring(game:HttpGet("https://raw.githubusercontent.com/Cylex234/Old-aut-gui-1/main/Walk%20in%20ts",true))()
+    local BlockedRemotes = {
+		"Anchor",
+	}
+	
+	local Events = {
+		Fire = true, 
+		Invoke = true, 
+		FireServer = true, 
+		InvokeServer = true,
+	}
+	
+	local gameMeta = getrawmetatable(game)
+	local psuedoEnv = {
+		["__index"] = gameMeta.__index,
+		["__namecall"] = gameMeta.__namecall;
+	}
+	setreadonly(gameMeta, false)
+	gameMeta.__index, gameMeta.__namecall = newcclosure(function(self, index, ...)
+		if Events[index] then
+			for i,v in pairs(BlockedRemotes) do
+				if v == self.Name and not checkcaller() then return nil end
+			end
+		end
+		return psuedoEnv.__index(self, index, ...)
+	end)
+	setreadonly(gameMeta, true)
+	wait(0.1)
 end)
 
 --Settings
